@@ -1,5 +1,9 @@
 Changes since CEXP-2.1
 Changes since CEXP-2.0.beta
+ 2011/10/10:
+ - Makefile.am: add cxxdummy to EXTRA_DIST.
+ - Makefile.am: add cpptest contents explicitly to EXTRA_DIST (instead of
+                entire subdir which would include CVS/
  2011/08/04:
  - Makefile.am: export host_alias, host_os, and host_cpu.
  2011/07/15:
